objects/Accounts_Receivable__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Customer_Number__c</fullName>
        <description>Alternative customer account identifier. Used for reporting only.</description>
        <label>Alternate Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Text__c</fullName>
        <description>Free-form text field that usually contains pertinent information about the invoice. SAP companies should provide this field; non-SAP companies may provide this field if they wish.</description>
        <label>Comment Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <description>Amount that indicates the open receivable is still within the timeframe of terms of the invoice. Provided in local currency. Only one aging category can be populated per record; if this amount is filled in, then all other aging categories must be submitted as zero. All positions must be numeric, with zero padding as appropriate, and the decimal point is assumed. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Current Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Customer account identifier associated with the
invoice. Used to validate against customer master data in the TED. Non-SAP companies
should provide only the 8-digit account number base; suffix numbers should not be
included.</description>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Organization_ID__c</fullName>
        <description>Organization-id associated with the customer
account for the invoice. Must exist in the GBL_ORGS table in the TED.</description>
        <label>Customer Organization ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Record_Count__c</fullName>
        <label>Detail Record Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Indicates the type of transaction. Examples include DR for A/R Invoice and DG for Credit memo.</description>
        <inlineHelpText>Examples include DR for A/R Invoice and DG for Credit memo.</inlineHelpText>
        <label>Document Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Date by which the invoice must be paid in full.
Submitted in MMDDYY. Relationship of invoice date, terms code, and due date determines aging category for the receivable.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filler_1__c</fullName>
        <label>Filler 1</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filler_2__c</fullName>
        <label>Filler 2</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <description>Amount of the invoice provided in local currency. All positions must be numeric, with zero padding as appropriate, and the decimal point is assumed. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Invoice Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Date of the invoice. Submitted in MMDDYYYY format.</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Unique identifier for the invoice.</description>
        <label>Invoice Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Profit_Center__c</fullName>
        <description>TED Profit Center.</description>
        <label>Management Profit Center</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_480_Days_Past_Due_Amount__c</fullName>
        <description>Amount that indicates the open receivable is over 480 days beyond the terms of the invoice. Provided in local currency. Only one aging category can be populated per record; if this amount is filled in, then all other aging categories must be submitted as zero. All positions must be numeric, with zero padding as appropriate, and the decimal point is assumed. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Over 480 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Posting_Key__c</fullName>
        <description>Values that identify whether to post the amounts as debits (positive) or credits (negative). Both characters must be provided. Values 01 through 10 are used for debits, and values 11 through 20 are used for credits.</description>
        <inlineHelpText>Values 01 through 10 are used for debits, and values 11 through 20 are used for credits.</inlineHelpText>
        <label>Posting Key</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Layout_ID__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Layout ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center__c</fullName>
        <description>SAP Profit Center</description>
        <label>SAP Profit Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <description>Date the file is sent to the TED. Submitted in MMDDYYYY format.</description>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitting_Organization_ID__c</fullName>
        <description>Organization-id for whom the data is being submitted. Must exist in the GBL_ORGS table in the TED.</description>
        <label>Submitting Organization ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Code__c</fullName>
        <description>Terms coding identifier for the invoice.</description>
        <label>Terms Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_121_210_Days_Past_Due_Amount__c</fullName>
        <description>Sum of 121-210 days past due amounts from all detail records. Left pad with zeroes as appropriate. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Total 121-210 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_1_30_Days_Past_Due_Amount__c</fullName>
        <description>Sum of 1-30 days past due amounts from all detail records. Left pad with zeroes as appropriate. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Total 1-30 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_211_300_Days_Past_Due_Amount__c</fullName>
        <description>Sum of 211-300 days past due amounts from all detail records. Left pad with zeroes as appropriate. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Total 211-300 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_Amount__c</fullName>
        <description>Sum of current amounts from all detail records. Left pad with zeroes as appropriate. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Total Current Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <description>Sum of invoice amounts from all detail records. Left pad with zeroes as appropriate. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Total Invoice Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Over_480_Days_Past_Due_Amount__c</fullName>
        <description>Sum of over 480 days past due amounts from all detail records. Left pad with zeroes as appropriate. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>Total Over 480 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X121_210_Days_Past_Due_Amount__c</fullName>
        <description>Amount that indicates the open receivable is 121-210 days beyond the terms of the invoice. Provided in local currency. Only one aging category can be populated per record; if this amount is filled in, then all other aging categories must be submitted as zero. All positions must be numeric, with zero padding as appropriate, and the decimal point is assumed. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>121-210 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_30_Days_Past_Due_Amount__c</fullName>
        <description>Amount that indicates the open receivable is 1-30 days beyond the terms of the invoice. Provided in local currency. Only one aging category can be populated per record; if this amount is filled in, then all other aging categories must be submitted as zero. All positions must be numeric, with zero padding as appropriate, and the decimal point is assumed. Negative numbers should contain a minus
sign in position 1 of the field as appropriate.</description>
        <label>1-30 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X211_300_Days_Past_Due_Amount__c</fullName>
        <description>Amount that indicates the open receivable is 211-300 days beyond the terms of the invoice. Provided in local currency. Only one aging category can be populated per record; if this amount is filled in, then all other aging categories must be submitted as zero. All positions must be numeric, with zero padding as appropriate, and the decimal point is assumed. Negative numbers should contain a minus sign in position 1 of the field as appropriate.</description>
        <label>211-300 Days Past Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Accounts Receivable</label>
    <nameField>
        <label>Accounts Receivable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Receivable</pluralLabel>
    <recordTypes>
        <fullName>ARRC</fullName>
        <active>true</active>
        <label>ARRC</label>
    </recordTypes>
    <recordTypes>
        <fullName>ARRD</fullName>
        <active>true</active>
        <label>ARRD</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>